--- a/BuildspecApply.yml
+++ b/BuildspecApply.yml
@@ -15,4 +15,4 @@ phases:
       - terraform apply -auto-approve
   post_build:
     commands:
-      - terraform destroy
+      - terraform destroy -auto-approve
