--- a/BuildspecApply.yml
+++ b/BuildspecApply.yml
@@ -13,6 +13,7 @@ phases:
       - terraform version
       - terraform init
       - terraform apply -auto-approve
-  post_build:
+      - sleep 45
+  tests:
     commands:
-      - terraform destroy -auto-approve
+      - TEST_IP_ADDRESS=`terraform output -raw linux_ip` TEST_PORT=22 rake test
