--- a/BuildspecApply.yml
+++ b/BuildspecApply.yml
@@ -14,4 +14,5 @@ phases:
       - terraform init
       - terraform apply -auto-approve
       - sleep 45
-      - TEST_IP_ADDRESS=`terraform output -raw linux_ip` TEST_PORT=22 rake test
+      - rake
+      - TEST_IP_ADDRESS=`terraform output -raw linux_ip` TEST_PORT=22 rake --trace test
