--- a/BuildspecApply.yml
+++ b/BuildspecApply.yml
@@ -16,4 +16,5 @@ phases:
       - terraform apply -auto-approve
       - sleep 45
       - dest_ip=`terraform output -raw linux_ip`
+      - echo $dest_ip
       - nc -z $dest_ip 22
