--- a/BuildspecApply.yml
+++ b/BuildspecApply.yml
@@ -16,7 +16,7 @@ phases:
       - terraform apply -auto-approve
       - sleep 45
       - dest_ip=`terraform output -raw linux_ip`
-      - if nc -z $dest_ip 22; then
+      - if echo $dest_ip; then
           echo "Connection successful"
         else
           echo "Connection failure"
